<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardViewNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="#FFEEA9"
    app:strokeWidth="1dp"
    app:strokeColor="#AF1B1B"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/foodImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:padding="5dp"
                android:src="@drawable/dish128"
                app:civ_border_color="#AF1B1B"
                app:civ_border_width="2.5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="5dp">

                <TextView
                    android:id="@+id/foodName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textColor="#C45508"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="Food"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/foodDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description"
                    android:layout_marginBottom="5dp"
                    android:textColor="#C45508"
                    android:textSize="15sp"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/foodQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="Quantity:" />

            </LinearLayout>

        </LinearLayout>

</com.google.android.material.card.MaterialCardView>

