<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditFoodItemActivity">

    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginRight="150dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/dish128"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/deleteImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:ems="8"
        android:text="Delete Image"
        android:textColor="@color/white"
        android:layout_marginLeft="30dp"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toTopOf="@+id/foodImage" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/chooseImageBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="choose image"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:ems="8"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toEndOf="@+id/foodImage"
        app:layout_constraintTop_toBottomOf="@+id/deleteImageBtn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/uploadImageBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="confirm image choice"
        android:textColor="@color/white"
        android:background="@drawable/button"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/chooseImageBtn"
        app:layout_constraintStart_toStartOf="@+id/chooseImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/chooseImageBtn" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/uploadImageBtn"
        app:layout_constraintStart_toStartOf="@+id/uploadImageBtn"
        app:layout_constraintTop_toBottomOf="@+id/uploadImageBtn" />

    <EditText
        android:id="@+id/foodNameEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="18"
        android:hint="Food Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImage" />

    <EditText
        android:id="@+id/descriptionEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="18"
        android:hint="Description (Optional)"
        android:inputType="textMultiLine|textCapSentences"
        app:layout_constraintEnd_toEndOf="@+id/foodNameEdt"
        app:layout_constraintStart_toStartOf="@+id/foodNameEdt"
        app:layout_constraintTop_toBottomOf="@+id/foodNameEdt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editFoodItemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button2"
        android:ems="10"
        android:text="Edit Food Listing"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/descriptionEdt"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/descriptionEdt"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEdt" />

</androidx.constraintlayout.widget.ConstraintLayout>